--- a/language/tests/expressions/Makefile
+++ b/language/tests/expressions/Makefile
@@ -1,6 +1,7 @@
 TESTS=$(sort $(basename $(wildcard generated*.lama)))
 
-RC = ../../src/lamac
+# RC = ../../src/lamac
+LAMAR=../../../standalone/target/slnative
 
 .PHONY: check $(TESTS)
 
@@ -8,9 +9,7 @@ check: $(TESTS)
 
 $(TESTS): %: %.lama
 	@echo "regression/expressions/$@"
-	@LAMA=../../runtime $(RC) $< && cat $@.input | ./$@ > $@.log && diff $@.log orig/$@.log
-	@cat $@.input | LAMA=../../runtime $(RC) -i $< > $@.log && diff $@.log orig/$@.log
-	@cat $@.input | LAMA=../../runtime $(RC) -s $< > $@.log && diff $@.log orig/$@.log
+	@cat $@.input | $(LAMAR) --disable-launcher-output $@.lama > $@.log && diff $@.log orig/$@.log
 
 clean:
 	rm -f *.log *.s *~
